[gd_scene load_steps=2 format=3 uid="uid://bxj5kfh8n7qwm"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuPanel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_constants/separation = 30

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/MenuPanel/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "PROJECT ICARIUS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/MenuPanel/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Base Building & Resource Management"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "▶ START GAME"

[node name="OptionsButton" type="Button" parent="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "⚙ OPTIONS"

[node name="QuitButton" type="Button" parent="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "✕ QUIT"

[connection signal="pressed" from="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/MenuPanel/VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_quit_pressed"]